# x0

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LOGO_ENHANCEMENTS.md  MULTILANGUAGE.md  PACKAGING.md  README.md  README_LOGO_SUGGESTION.md  RELEASE.md  RELEASE_FINAL_STEPS.md  RELEASE_NOTES.md  RELEASE_v1.0.0.md  RELEASE_v1.0.md  SECURITY.md  enhance_logo.py  test-pipeline.py  x0-copy-deb-packages.sh  x0_js.kdev4
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
conf/: vhost-x0.conf  wsgi.conf
config/: app-config.json
cpp/: CMakeLists.txt  README.md
cpp/include/: x0BaseElement.h  x0BaseObject.h  x0Factory.h  x0ObjButton.h  x0ObjDiv.h  x0Reactor.h  x0Screen.h
cpp/src/: main.cpp  x0BaseElement.cpp  x0BaseObject.cpp  x0Factory.cpp  x0ObjButton.cpp  x0ObjDiv.cpp  x0Reactor.cpp  x0Screen.cpp
cpp/test/: test_examples.cpp
database/: 01-create-database.sql  02-x0-sys-DB.sql  03-insert-sys-config.sql  04-sys-text.sql  insert-sys-config.sql  sys-text.sql  x0.DB.sql
debian/: .gitignore  README.md  changelog  control  copyright  debhelper-build-stamp  x0-app.install  x0-app.postinst  x0-db-install-tpl.install  x0-db-install.install  x0-db.install  x0-db.postinst  x0-js.install  x0-js.postinst  x0-msg-server.install  x0-msg-server.postinst  x0-psycopg2-patched.postinst  x0-test.install  x0.postinst
deployment/: deployment.sh  monitor_var_www.sh
doc/: appdev-backend.rst  appdev-config.rst  appdev-context-menu.rst  appdev-deployment.rst  appdev-event-system.rst  appdev-form-objects.rst  appdev-forms.rst  appdev-global-css.rst  appdev-global.rst  appdev-grid-system.rst  appdev-grid.rst  appdev-logging.rst  appdev-messaging.rst  appdev-objects.rst  appdev-overlay.rst  appdev-user-defaults.rst  appdev.rst  backend-integration.rst  base-layout.rst  base-objects.rst  conf.py  config-files.rst  control-logic.rst  dev-architecture.rst  dev-backend.rst  dev-examples.rst  dev-object-modeling.rst  dev-oop-classes.rst  dev-oop-model.rst  dev-porting.rst  dev-tests.rst  enhanced-formating.rst  enhanced-objects.rst  error-handling.rst  event-system.rst  examples.rst  glossary.rst  hello-world.rst  index.rst  installation.rst  (+15 more)
(+425 files in other folders)
